[package]
name = "confirm-pam"
version = "0.6.0"
edition = "2024"
authors = ["azu <azuciao@gmail.com>"]
description = "A CLI tool for biometric authentication confirmation"
license = "MIT"
repository = "https://github.com/azu/confirm-pam"
homepage = "https://github.com/azu/confirm-pam"
documentation = "https://github.com/azu/confirm-pam"
readme = "README.md"
keywords = ["cli", "biometric", "authentication", "touchid", "security"]
categories = ["command-line-utilities", "authentication"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
pam = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = [
    "Security_Credentials_UI",          # UserConsentVerifier
    "Win32_System_WinRT",               # IUserConsentVerifierInterop
    "Win32_UI_WindowsAndMessaging",     # GetDesktopWindow
] }
windows-future = "0.2.0"                # IAsyncOperation
futures = "0.3.31"                      # executor::block_on